# marketflow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: dbt_ci.yml
agent/: agent.py
agent/tools/: airflow_tools.py  aws_tools.py  dbt_tools.py
airflow/dags/: marketflow_stocks_daily.py
dashboard/: app.py
dbt/: .sqlfluff  dbt_project.yml
dbt/ci/profiles/: profiles.yml
dbt/models/marts/: _mart_stocks__daily_returns.yml  _mart_stocks__sector_performance.yml  mart_stocks__daily_returns.sql  mart_stocks__moving_averages.sql  mart_stocks__sector_performance.sql  mart_stocks__volatility.sql
dbt/models/staging/: _bronze_stocks.yml  _stg_stocks__ohlcv.yml  stg_stocks__ohlcv.sql
dbt/seeds/: ticker_sectors.csv
dbt/tests/: assert_daily_return_within_bounds.sql
infrastructure/: iam_policy.json
ingestion/: load_to_redshift.py  yfinance_extractor.py
