[project]
name = "de-project"
version = "0.1.0"
description = "MarketFlow — AI-driven financial data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # AWS
    "boto3>=1.43.28",
    # Data
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "yfinance>=0.2.54",
    # Claude agent
    "anthropic>=0.49.0",
    # Utils
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=13.9.0",
]

[project.scripts]
marketflow = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]
